kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
        - path: /homepage(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
